{
  "version": 4,
  "terraform_version": "1.14.0",
  "serial": 16,
  "lineage": "ae7313e4-da9c-640d-d4e8-f3f36f07ccc4",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accelerated_networking_enabled": false,
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/0b87197f-ea0c-4fda-927f-975527e6e84d/resourceGroups/rg-todo-devops/providers/Microsoft.Network/networkInterfaces/todo-devops-app-nic",
            "internal_domain_name_suffix": "ltbzjotak1mudc3g5lx0m35sac.gx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.0.2.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/0b87197f-ea0c-4fda-927f-975527e6e84d/resourceGroups/rg-todo-devops/providers/Microsoft.Network/publicIPAddresses/todo-devops-app-pip",
                "subnet_id": "/subscriptions/0b87197f-ea0c-4fda-927f-975527e6e84d/resourceGroups/rg-todo-devops/providers/Microsoft.Network/virtualNetworks/todo-devops-vnet/subnets/private-subnet"
              }
            ],
            "ip_forwarding_enabled": false,
            "location": "centralus",
            "name": "todo-devops-app-nic",
            "private_ip_address": "10.0.2.4",
            "private_ip_addresses": [
              "10.0.2.4"
            ],
            "resource_group_name": "rg-todo-devops",
            "tags": {
              "Environment": "prod",
              "Project": "todo-devops"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_public_ip.app",
            "azurerm_resource_group.main",
            "azurerm_subnet.private",
            "azurerm_virtual_network.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accelerated_networking_enabled": false,
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/0b87197f-ea0c-4fda-927f-975527e6e84d/resourceGroups/rg-todo-devops/providers/Microsoft.Network/networkInterfaces/todo-devops-bastion-nic",
            "internal_domain_name_suffix": "ltbzjotak1mudc3g5lx0m35sac.gx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.0.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/0b87197f-ea0c-4fda-927f-975527e6e84d/resourceGroups/rg-todo-devops/providers/Microsoft.Network/publicIPAddresses/todo-devops-bastion-pip",
                "subnet_id": "/subscriptions/0b87197f-ea0c-4fda-927f-975527e6e84d/resourceGroups/rg-todo-devops/providers/Microsoft.Network/virtualNetworks/todo-devops-vnet/subnets/public-subnet"
              }
            ],
            "ip_forwarding_enabled": false,
            "location": "centralus",
            "name": "todo-devops-bastion-nic",
            "private_ip_address": "10.0.1.4",
            "private_ip_addresses": [
              "10.0.1.4"
            ],
            "resource_group_name": "rg-todo-devops",
            "tags": {
              "Environment": "prod",
              "Project": "todo-devops"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_public_ip.bastion",
            "azurerm_resource_group.main",
            "azurerm_subnet.public",
            "azurerm_virtual_network.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface_security_group_association",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/0b87197f-ea0c-4fda-927f-975527e6e84d/resourceGroups/rg-todo-devops/providers/Microsoft.Network/networkInterfaces/todo-devops-app-nic|/subscriptions/0b87197f-ea0c-4fda-927f-975527e6e84d/resourceGroups/rg-todo-devops/providers/Microsoft.Network/networkSecurityGroups/todo-devops-app-nsg",
            "network_interface_id": "/subscriptions/0b87197f-ea0c-4fda-927f-975527e6e84d/resourceGroups/rg-todo-devops/providers/Microsoft.Network/networkInterfaces/todo-devops-app-nic",
            "network_security_group_id": "/subscriptions/0b87197f-ea0c-4fda-927f-975527e6e84d/resourceGroups/rg-todo-devops/providers/Microsoft.Network/networkSecurityGroups/todo-devops-app-nsg"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_network_interface.app",
            "azurerm_network_security_group.app",
            "azurerm_public_ip.app",
            "azurerm_resource_group.main",
            "azurerm_subnet.private",
            "azurerm_virtual_network.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface_security_group_association",
      "name": "bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/0b87197f-ea0c-4fda-927f-975527e6e84d/resourceGroups/rg-todo-devops/providers/Microsoft.Network/networkInterfaces/todo-devops-bastion-nic|/subscriptions/0b87197f-ea0c-4fda-927f-975527e6e84d/resourceGroups/rg-todo-devops/providers/Microsoft.Network/networkSecurityGroups/todo-devops-bastion-nsg",
            "network_interface_id": "/subscriptions/0b87197f-ea0c-4fda-927f-975527e6e84d/resourceGroups/rg-todo-devops/providers/Microsoft.Network/networkInterfaces/todo-devops-bastion-nic",
            "network_security_group_id": "/subscriptions/0b87197f-ea0c-4fda-927f-975527e6e84d/resourceGroups/rg-todo-devops/providers/Microsoft.Network/networkSecurityGroups/todo-devops-bastion-nsg"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_network_interface.bastion",
            "azurerm_network_security_group.bastion",
            "azurerm_public_ip.bastion",
            "azurerm_resource_group.main",
            "azurerm_subnet.public",
            "azurerm_virtual_network.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/0b87197f-ea0c-4fda-927f-975527e6e84d/resourceGroups/rg-todo-devops/providers/Microsoft.Network/networkSecurityGroups/todo-devops-app-nsg",
            "location": "centralus",
            "name": "todo-devops-app-nsg",
            "resource_group_name": "rg-todo-devops",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "SSH_from_Bastion",
                "priority": 1001,
                "protocol": "Tcp",
                "source_address_prefix": "10.0.1.0/24",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "3000",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "App_Port",
                "priority": 1003,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "80",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "HTTP",
                "priority": 1002,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {
              "Environment": "prod",
              "Project": "todo-devops"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/0b87197f-ea0c-4fda-927f-975527e6e84d/resourceGroups/rg-todo-devops/providers/Microsoft.Network/networkSecurityGroups/todo-devops-bastion-nsg",
            "location": "centralus",
            "name": "todo-devops-bastion-nsg",
            "resource_group_name": "rg-todo-devops",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "SSH",
                "priority": 1001,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {
              "Environment": "prod",
              "Project": "todo-devops"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/0b87197f-ea0c-4fda-927f-975527e6e84d/resourceGroups/rg-todo-devops/providers/Microsoft.Network/publicIPAddresses/todo-devops-app-pip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "74.249.255.176",
            "ip_version": "IPv4",
            "location": "centralus",
            "name": "todo-devops-app-pip",
            "resource_group_name": "rg-todo-devops",
            "sku": "Standard",
            "sku_tier": "Regional",
            "tags": {
              "Environment": "prod",
              "Project": "todo-devops"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/0b87197f-ea0c-4fda-927f-975527e6e84d/resourceGroups/rg-todo-devops/providers/Microsoft.Network/publicIPAddresses/todo-devops-bastion-pip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "172.202.38.71",
            "ip_version": "IPv4",
            "location": "centralus",
            "name": "todo-devops-bastion-pip",
            "resource_group_name": "rg-todo-devops",
            "sku": "Standard",
            "sku_tier": "Regional",
            "tags": {
              "Environment": "prod",
              "Project": "todo-devops"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.2.0/24"
            ],
            "default_outbound_access_enabled": true,
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/0b87197f-ea0c-4fda-927f-975527e6e84d/resourceGroups/rg-todo-devops/providers/Microsoft.Network/virtualNetworks/todo-devops-vnet/subnets/private-subnet",
            "name": "private-subnet",
            "private_endpoint_network_policies": "Enabled",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "rg-todo-devops",
            "virtual_network_name": "todo-devops-vnet"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.main",
            "azurerm_virtual_network.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.1.0/24"
            ],
            "default_outbound_access_enabled": true,
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/0b87197f-ea0c-4fda-927f-975527e6e84d/resourceGroups/rg-todo-devops/providers/Microsoft.Network/virtualNetworks/todo-devops-vnet/subnets/public-subnet",
            "name": "public-subnet",
            "private_endpoint_network_policies": "Enabled",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "rg-todo-devops",
            "virtual_network_name": "todo-devops-vnet"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.main",
            "azurerm_virtual_network.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "ba94c35c-5660-41d9-8ba6-faefa677f202",
            "id": "/subscriptions/0b87197f-ea0c-4fda-927f-975527e6e84d/resourceGroups/rg-todo-devops/providers/Microsoft.Network/virtualNetworks/todo-devops-vnet",
            "location": "centralus",
            "name": "todo-devops-vnet",
            "resource_group_name": "rg-todo-devops",
            "tags": {
              "Environment": "prod",
              "Project": "todo-devops"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.main"
          ]
        }
      ]
    }
  ]
}